fix event alignment issue

--- a/themes/experience-engine-v2/assets/styles/components/affiliatemarketing/affiliatemarketing.css
+++ b/themes/experience-engine-v2/assets/styles/components/affiliatemarketing/affiliatemarketing.css
@@ -212,3 +212,14 @@
 		}
 	}
 }
+.affiliate-marketingmeta{
+	& .affiliate-marketingmeta-item {
+		& .caption{
+			& .wp-caption{
+				margin-right: 0px;
+				margin-left: 0px;
+				width: 100% !important;
+			}
+		} 
+	}
+} 
