--- a/themes/experience-engine-v2/assets/styles/components/gallery/listicle.css
+++ b/themes/experience-engine-v2/assets/styles/components/gallery/listicle.css
@@ -95,3 +95,8 @@
 	}
 
 }
+.gallery-embed-description{
+	& .wp-caption {    
+		width: 100% !important;
+	}
+}
